syntax = "proto3";
package dydxprotocol.vault;

import "cosmos_proto/cosmos.proto";
import "cosmos/msg/v1/msg.proto";
import "dydxprotocol/subaccounts/subaccount.proto";
import "dydxprotocol/vault/params.proto";
import "dydxprotocol/vault/vault.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/dydxprotocol/v4-chain/protocol/x/vault/types";

// Msg defines the Msg service.
service Msg {
  // DepositToVault deposits funds into a vault.
  rpc DepositToVault(MsgDepositToVault) returns (MsgDepositToVaultResponse);
  // UpdateParams updates the Params in state.
  rpc UpdateParams(MsgUpdateParams) returns (MsgUpdateParamsResponse);
}

// MsgDepositToVault deposits the specified asset from the subaccount to the
// vault.
message MsgDepositToVault {
  // This annotation enforces that the tx signer is the owner specified in
  // subaccount_id. Therefore, this enforces that only the owner of the
  // subaccount can deposit into the vault using that subaccount.
  option (cosmos.msg.v1.signer) = "subaccount_id";

  // The vault to deposit into.
  VaultId vault_id = 1;

  // The subaccount to deposit from.
  dydxprotocol.subaccounts.SubaccountId subaccount_id = 2;

  // Number of quote quantums to deposit.
  bytes quote_quantums = 3 [
    (gogoproto.customtype) =
        "github.com/dydxprotocol/v4-chain/protocol/dtypes.SerializableInt",
    (gogoproto.nullable) = false
  ];
}

// MsgDepositToVaultResponse is the Msg/DepositToVault response type.
message MsgDepositToVaultResponse {}

// MsgWithdrawFromVault attempts to withdraw the specified target amount of
// asset from the vault to the subaccount.
message MsgWithdrawFromVault {
  // This annotation enforces that the tx signer is the owner specified in
  // subaccount_id. Therefore, this enforces that only the owner of the
  // subaccount can withdraw from the vault equity allocated to the subaccount.
  option (cosmos.msg.v1.signer) = "subaccount_id";

  // The vault to withdraw from.
  VaultId vault_id = 1;

  // The subaccount to withdraw to.
  // The subaccount must own shares in the vault.
  dydxprotocol.subaccounts.SubaccountId subaccount_id = 2;

  // The amount of quote quantums to withdraw.
  // The amount should account for slippage, so that the final amount withdrawn
  // to the user matches the amount specified.
  // If the amount specified exceeds the max amount that can be withdrawn (=
  // user equity - slippage), only the max amount is withdrawn. For example:
  //    * user equity = $1020
  //    * target amount = $1000
  //    * slippage = $50
  // then, the amount withdrawn is $970 (= 1020 - (1000 + 50 - 1020))
  bytes quote_quantums = 3 [
    (gogoproto.customtype) =
        "github.com/dydxprotocol/v4-chain/protocol/dtypes.SerializableInt",
    (gogoproto.nullable) = false
  ];
}

// MsgWithdrawFromVaultResponse is the Msg/WithdrawFromVault response type.
message MsgWithdrawFromVaultResponse {
  // Number of shares that have been redeemed as part of the withdrawal.
  NumShares redeemed_shares = 1;

  // Number of shares remaining after the withdrawal.
  NumShares remaining_shares = 2;

  // Number of shares for the vault after the withdrawal.
  NumShares total_shares = 3;
}

// MsgUpdateParams is the Msg/UpdateParams request type.
message MsgUpdateParams {
  // Authority is the address that controls the module.
  option (cosmos.msg.v1.signer) = "authority";
  string authority = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];

  // The parameters to update. Each field must be set.
  Params params = 2 [ (gogoproto.nullable) = false ];
}

// MsgUpdateParamsResponse is the Msg/UpdateParams response type.
message MsgUpdateParamsResponse {}
